# kbot

./: .gitignore  README.md  blocks_test.txt  boot.py  boot1.py  boot2.py  chat.py  docker-compose.yml  html_test.txt  pyproject.toml  text_test.txt
kbot/: chatbot.py  transformers.py
