[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kbot"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kurtis Fields", email = "kurtisfields@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "loguru==0.7.2",
  "numpy==1.26.1",
  "openai==0.28.1",
  "pandas==2.1.1",
  "redis==5.0.1",
  "requests==2.31.0",
  "streamlit==1.27.2",
  "streamlit_chat==0.1.1",
  "termcolor==2.3.0",
  #"pypdf ==3.8.0",
  "PyMuPDF==1.23.6",
  #"jupyter",
  #"ipykernel",
  #"textract",
  "tiktoken==0.5.1",
  "spacy==3.7.2",
  "nltk==3.8.1",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/kfields/kbot#readme"
Issues = "https://github.com/kfields/kbot/issues"
Source = "https://github.com/kfields/kbot"

[tool.hatch.version]
path = "kbot/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=kbot --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "kbot/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
